add lists routes
