# routes.js
@@ -1,6 +1,7 @@
 const express = require('express')
 const router = express.Router()
 const RecipesController = require('./controllers/recipes_controller')
+const ListsController = require('./controllers/lists_controller')
 
 router.post('/api/v1/recipes', (req, res) => RecipesController.create(req, res))
 
@@ -9,5 +10,9 @@ router.get('/api/v1/recipes/search', (req, res) => RecipesController.find(req, r
 
 router.get('/api/v1/recipes/:id', (req, res) => RecipesController.get(req, res))
 router.put('/api/v1/recipes/:id', (req, res) => RecipesController.update(req, res))
+
+router.post('/api/v1/lists', (req, res) => ListsController.create(req, res))
+router.get('/api/v1/lists/:id', (req, res) => ListsController.get(req, res))
+router.put('/api/v1/lists/:id', (req, res) => ListsController.update(req, res))
 
 module.exports = router
